--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/layout.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Open+Sans:400,700,800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="styles/style.css">
 
     <link rel="icon" href="favicon.ico">
@@ -77,18 +80,200 @@
         </section>
         <!-- ======= BA-HERO END ======= -->
 
-        <section class="ba-about">
+
+        <!-- ======= BA-ABOUT START ======= -->
+        <section class="ba-section ba-about">
             <div class="container">
                 <div class="ba-row">
                     <div class="ba-col-6">
-
+                        <div class="ba-info-block">
+                            <h2 class="ba-info__title">about us</h2>
+                            <strong class="ba-info__subtitle">we are awesome</strong>
+                            <div class="ba-info__text">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos accusantium culpa a aut
+                                    illo minima consequuntur, quae porro delectus, placeat sed necessitatibus quam, eos
+                                    laboriosam modi? Officiis voluptas animi pariatur fugiat reprehenderit maxime, error
+                                    autem! Iusto amet saepe eum tempora? Laboriosam excepturi repudiandae eaque iure
+                                    iste incidunt quae! Asperiores, adipisci.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="ba-col-6">
+                        <div class="ba-info-block">
+                            <h2 class="ba-info__title">What We Do</h2>
+                            <strong class="ba-info__subtitle">creative & digital</strong>
+                            <div class="ba-info__text">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae expedita earum beatae
+                                    eum
+                                    fugiat repellat aliquam voluptatem quod blanditiis dolore qui maxime, accusamus
+                                    molestiae assumenda voluptates ratione culpa nam minus et eligendi. Inventore earum
+                                    reprehenderit magni totam corporis sequi similique quidem libero, ex nostrum
+                                    cupiditate voluptatum labore ullam deserunt quis.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ======= BA-ABOUT END ======= -->
+
+
+        <!-- ======= BA-BENEFITS START ======= -->
+        <section class="ba-section ba-benefits">
+            <div class="container">
+                <div class="ba-section__header">
+                    <h2 class="ba-info__title">Some benefits</h2>
+                    <div class="ba-info__text">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur ipsa earum
+                            provident cum iusto.
+                        </p>
+                    </div>
+                </div>
+                <div class="ba-row ba-benefits-list">
+                    <div class="ba-col-4">
+                        <div class="ba-benefit">
+                            <h3 class="ba-benefit__title">
+                                <div class="ba-benefit__icon">
+                                    <i class="ion-iphone"></i>
+                                </div>
+                                <span>Fully responsive</span>
+                            </h3>
+
+                            <div class="ba-info__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dicta dolorum
+                                    excepturi expedita rerum quibusdam laudantium, facilis est hic.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ba-col-4">
+                        <div class="ba-benefit">
+                            <h3 class="ba-benefit__title">
+                                <div class="ba-benefit__icon">
+                                    <i class="ion-iphone"></i>
+                                </div>
+                                <span>Fully responsive</span>
+                            </h3>
+
+                            <div class="ba-info__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dicta dolorum
+                                    excepturi expedita rerum quibusdam laudantium, facilis est hic.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ba-col-4">
+                        <div class="ba-benefit">
+                            <h3 class="ba-benefit__title">
+                                <div class="ba-benefit__icon">
+                                    <i class="ion-iphone"></i>
+                                </div>
+                                <span>Fully responsive</span>
+                            </h3>
+
+                            <div class="ba-info__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dicta dolorum
+                                    excepturi expedita rerum quibusdam laudantium, facilis est hic.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ba-col-4">
+                        <div class="ba-benefit">
+                            <h3 class="ba-benefit__title">
+                                <div class="ba-benefit__icon">
+                                    <i class="ion-iphone"></i>
+                                </div>
+                                <span>Fully responsive</span>
+                            </h3>
+
+                            <div class="ba-info__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dicta dolorum
+                                    excepturi expedita rerum quibusdam laudantium, facilis est hic.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ba-col-4">
+                        <div class="ba-benefit">
+                            <h3 class="ba-benefit__title">
+                                <div class="ba-benefit__icon">
+                                    <i class="ion-iphone"></i>
+                                </div>
+                                <span>Fully responsive</span>
+                            </h3>
+
+                            <div class="ba-info__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dicta dolorum
+                                    excepturi expedita rerum quibusdam laudantium, facilis est hic.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ba-col-4">
+                        <div class="ba-benefit">
+                            <h3 class="ba-benefit__title">
+                                <div class="ba-benefit__icon">
+                                    <i class="ion-iphone"></i>
+                                </div>
+                                <span>Fully responsive</span>
+                            </h3>
+
+                            <div class="ba-info__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dicta dolorum
+                                    excepturi expedita rerum quibusdam laudantium, facilis est hic.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- ======= BA-BENEFITS END ======= -->
+
+        <!-- ======= BA-TEAM START ======= -->
+        <section class="ba-section ba-team">
+            <div class="container">
+                <div class="ba-section__header">
+                    <h2 class="ba-info__title">The dream team</h2>
+                    <div class="ba-info__text">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur ipsa earum
+                            provident cum iusto.
+                        </p>
+                    </div>
+                </div>
+                <div class="ba-row ba-team-list">
+                    <div class="ba-col-3">
+                        <div class="ba-team-member">
+                            <img src="img/face.jpg" alt="name" class="ba-team-member__img">
+                            <div class="ba-team-member__info">
+                                <div>
+                                    <i class="ion-iphone"></i>
+                                </div>
+                                <h3 class="ba-team-member__name">
+                                    <a href="mailto:enriko@akad.com">Enriko</a>
+                                </h3>
+                                <p class="ba-team-member__position">
+                                    ios dev
+                                </p>
+                            </div>
+                        </div>
+
 
                     </div>
                 </div>
             </div>
         </section>
+        <!-- ======= BA-TEAM END ======= -->
     </main>
 
     <!-- ======= FOOTER START ======= -->
