stupid grammatical error fixed

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                             quos libero iure iusto?
                         </p>
 
-                        <form class="ba-subsribe-form">
+                        <form class="ba-subscribe-form">
                             <input type="email" required placeholder="your email" class="ba-input" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
                             <button class="ba-btn ba-button_green">send</button>
                         </form>
