--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ba-starter</title>
 
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/normalize.min.css">
+    <link rel="stylesheet" href="styles/layout.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Open+Sans:400,700,800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="styles/style.css">
 
     <link rel="icon" href="favicon.ico">
@@ -27,7 +26,15 @@
                     <a href="#" class="ba-logo__link">akad.</a>
                 </h1>
 
-                <nav hidden>
+                <input type="checkbox" id="menu-open" class="visually-hidden">
+
+                <label for="menu-open" class="ba-menu-btn" aria-label="open menu">
+                    <span class="ba-menu-btn__line"></span>
+                    <span class="ba-menu-btn__line"></span>
+                    <span class="ba-menu-btn__line"></span>
+                </label>
+
+                <nav class="ba-menu-block">
                     <ul class="ba-menu">
                         <li class="ba-menu__item">
                             <a href="#" class="ba-menu__link">item</a>
@@ -44,11 +51,7 @@
                     </ul>
                 </nav>
 
-                <button class="ba-menu-btn" aria-label="open menu">
-                    <span class="ba-menu-btn__line"></span>
-                    <span class="ba-menu-btn__line"></span>
-                    <span class="ba-menu-btn__line"></span>
-                </button>
+
             </div>
 
         </div>
@@ -346,7 +349,7 @@
                     </div>
                     <div class="ba-col-3">
                         <div class="ba-team-member">
-                            <img src="img/image.png" alt="name" class="ba-team-member__img">
+                            <img src="img/image.jpg" alt="name" class="ba-team-member__img">
                             <div class="ba-team-member__info">
                                 <div>
                                     <svg width=60 height=60>
