there is some js magic, which add one more breadcrumbs item, change benefit title color to red and set very strange attrinute for team members images

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="styles/style.css">
 
     <link rel="icon" href="favicon.ico">
+    
 </head>
 
 <body>
+        
     <!-- ======= HEADER START ======= -->
     <header class="ba-header">
         <div class="container">
@@ -494,6 +496,8 @@
             </symbol>
         </svg>
     </div>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
